# projectvault

./: .gitignore  .mcp.json  CLAUDE.md  Full Git Push Workflow.md  Full Git Push Workflow2.md  INSTALL.md  README.md  pending_commits.json  pyproject.toml  requirements-lock.txt  requirements.txt  test_mcp_tools.py  test_phase2.py  test_storage.py  test_tier_integration.py  test_tiers.py
docs/: CHANGELOG.md  COMPLETED.md  DEBBIE_DASHBOARD.md  PIPELINE_AGENT_GUIDE.md  PUBLISHING.md  ProjectVault_Product_Spec.md  loredocs.dbml  marketplace_listing.md  mcp_tool_catalog.md
docs/competitive/: INTAKE.md  perplexity_competitive_analysis_2026_04_08.md
docs/marketing/: convovault_projectvault_diagram.html  convovault_projectvault_sketch.html  loreconvo_loredocs_diagram.html  loreconvo_loredocs_sketch.html
docs/pm/: executive_dashboard_2026_04_02.html
docs/qa/: qa_report_2026_03_29.md  qa_report_2026_03_31.md  qa_report_2026_04_02.md  qa_report_2026_04_03_b.md
docs/security/: security_report_2026_03_31.md  security_report_2026_04_01.md  security_report_2026_04_02.md
loredocs/: license.py  server.py  storage.py  tiers.py
marketplace/claude-plugins/: README.md
projectvault/: __init__.py  server.py  storage.py
ron_skills/loreconvo/: .mcp.json  INSTALL.md  LICENSE  README.md  install.sh  requirements-lock.txt
ron_skills/loredocs-plugin/: README.md
scripts/: README.md  generate_license_key.py  install_dev_plugins.sh  local_model_preprocess.py  pipeline_helpers.py  pipeline_tracker.py  query_loredocs.py  safe_git.py  save_to_loreconvo.py
tests/: test_license.py
(+95 files in other folders)
